force-app/main/default/objects/SAI_Party_Street_Address__c/SAI_Party_Street_Address__c.object-meta.xml
<CustomObject>

    <label>SAI Party Street Address</label>
    <nameField>
        <displayFormat>PS-{00000000}</displayFormat>
        <label>SAI Party Street Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAI Party Street Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>