force-app/main/default/objects/SAI_Party_Street_Address__c/fields/Address_Line_4__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_4__c</fullName>
    <label>Address Line 4</label>
    <type>TextArea</type>
</CustomField>