force-app/main/default/objects/SAI_Party_Street_Address__c/fields/Party_Address_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Party_Address_Type_Code__c</fullName>
    <label>Party Address Type Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>