force-app/main/default/objects/SAI_Party_Street_Address__c/fields/Party_Number__c.field-meta.xml
<CustomField>
    <fullName>Party_Number__c</fullName>
    <label>Party Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>