force-app/main/default/objects/SAI_Party_Street_Address__c/fields/Region_Name__c.field-meta.xml
<CustomField>
    <fullName>Region_Name__c</fullName>
    <label>Region Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>