force-app/main/default/objects/SAI_Party_Street_Address__c/fields/Town_Name__c.field-meta.xml
<CustomField>
    <fullName>Town_Name__c</fullName>
    <label>Town Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>