force-app/main/default/objects/SAI_Party_Street_Address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Address_Line_1__c</columns>
    <columns>Address_Line_2__c</columns>
    <columns>Town_Name__c</columns>
    <columns>Region_Name__c</columns>
    <columns>Post_Code__c</columns>
    <columns>Party_Number__c</columns>
    <columns>Party_Source_System__c</columns>
    <columns>Party_Address_Type_Code__c</columns>
    <columns>Country_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>